--- a/style.css
+++ b/style.css
@@ -1,142 +1,141 @@
-        @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap');
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        
-        nav {
-            background-color: #0a183d;
-            color: white;
-            height: 65px;
-            font-size: 27px;
-            display: flex;
-            align-items: center;
-            padding: 0 12px;
-            font-family: 'Roboto', sans-serif;
-        }
-        
-        nav ul li {
-            list-style-type: none;
-        }
-        
+    @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&family=Roboto&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    nav {
+        background-color: #0a183d;
+        color: white;
+        height: 65px;
+        font-size: 27px;
+        display: flex;
+        align-items: center;
+        padding: 0 12px;
+        font-family: 'Roboto', sans-serif;
+    }
+    
+    nav ul li {
+        list-style-type: none;
+    }
+    
+    .gameContainer {
+        display: flex;
+        justify-content: center;
+        margin-top: 50px;
+        min-height: 100vh;
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+    
+    .container {
+        display: grid;
+        grid-template-rows: repeat(3, 10vw);
+        grid-template-columns: repeat(3, 10vw);
+        font-family: 'Roboto', sans-serif;
+        position: relative;
+    }
+    
+    .box {
+        border: 2px solid black;
+        font-size: 8vw;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .box:hover {
+        background-color: rgb(242, 234, 250);
+    }
+    
+    .info {
+        font-size: 22px;
+    }
+    
+    .gameInfo {
+        padding: 0 34px;
+        font-family: 'Baloo Bhaina 2', cursive;
+    }
+    
+    .gameInfo h1 {
+        font-size: 2.5rem;
+    }
+    
+    .imgbox img {
+        width: 0;
+        transition: width 1s ease-in-out;
+    }
+    
+    .br-0 {
+        border-right: 0;
+    }
+    
+    .bl-0 {
+        border-left: 0;
+    }
+    
+    .bt-0 {
+        border-top: 0;
+    }
+    
+    .bb-0 {
+        border-bottom: 0;
+    }
+    
+    #reset {
+        margin: 0 23px;
+        padding: 1px 18px;
+        background: #f3e7f9;
+        border-radius: 6px;
+        cursor: pointer;
+        font-family: 'Baloo Bhaina 2';
+        font-size: 15px;
+        font-weight: bolder;
+    }
+    
+    .line {
+        background-color: black;
+        height: 3px;
+        width: 0;
+        position: absolute;
+        background-color: #911d91;
+        transition: width 1s ease-in-out;
+    }
+    
+    @media screen and (max-width: 950px) {
         .gameContainer {
-            display: flex;
-            justify-content: center;
-            margin-top: 50px;
+            flex-wrap: wrap;
         }
-        
-        .container {
-            display: grid;
-            grid-template-rows: repeat(3, 10vw);
-            grid-template-columns: repeat(3, 10vw);
-            font-family: 'Roboto', sans-serif;
-            position: relative;
-        }
-        
-        .box {
-            border: 2px solid black;
-            font-size: 8vw;
-            cursor: pointer;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        
-        .box:hover {
-            background-color: rgb(242, 234, 250);
-        }
-        
-        .info {
-            font-size: 22px;
-        }
-        
         .gameInfo {
-            padding: 0 34px;
-            font-family: 'Baloo Bhaina 2', cursive;
+            margin-top: 34px;
         }
-        
         .gameInfo h1 {
-            font-size: 2.5rem;
+            font-size: 1.5rem;
         }
-        
-        .imgbox img {
-            width: 0;
-            transition: width 1s ease-in-out;
+        .container {
+            grid-template-rows: repeat(3, 20vw);
+            grid-template-columns: repeat(3, 20vw);
         }
-        
-        .br-0 {
-            border-right: 0;
-        }
-        
-        .bl-0 {
-            border-left: 0;
-        }
-        
-        .bt-0 {
-            border-top: 0;
-        }
-        
-        .bb-0 {
-            border-bottom: 0;
-        }
-        
-        #reset {
-            margin: 0 23px;
-            padding: 1px 18px;
-            background: #f3e7f9;
-            border-radius: 6px;
-            cursor: pointer;
-            font-family: 'Baloo Bhaina 2';
-            font-size: 15px;
-            font-weight: bolder;
-        }
-        
-        .line {
-            background-color: black;
-            height: 3px;
-            width: 0;
-            position: absolute;
-            background-color: #911d91;
-            transition: width 1s ease-in-out;
-        }
-        
-        @media screen and (max-width: 950px) {
-            .gameContainer {
-                flex-wrap: wrap;
-            }
-            .gameInfo {
-                margin-top: 34px;
-            }
-            .gameInfo h1 {
-                font-size: 1.5rem;
-            }
-            .container {
-                grid-template-rows: repeat(3, 20vw);
-                grid-template-columns: repeat(3, 20vw);
-            }
-        }
-        
-        .footer {
-            width: 100vw;
-            height: 2rem;
-            background-color: #0a183d;
-            margin-top: auto;
-        }
-        
-        .footer p {
-            color: #fff;
-            font-size: 1rem;
-            text-align: center;
-            text-transform: capitalize;
-            line-height: 2rem;
-        }
-        
         body {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
+            overflow-x: hidden;
         }
-        
-        html {
-            height: 100%;
+        .gameContainer {
+            max-width: 100%;
+            overflow-x: hidden;
         }
+    }
+    
+    .center {
+        text-align: center;
+    }
+    
+    footer {
+        background: #0a183d;
+        color: white;
+        padding: 9px 20px;
+    }
+    
+    body {
+        overflow-x: hidden;
+    }
